--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.4",
+    "babel-jest": "^27.2.0",
     "bootstrap": "^3.4.1",
     "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
