--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-jest": "^27.2.0",
     "bootstrap": "^3.4.1",
     "dayjs": "^1.10.7",
+    "jest": "^27.2.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "node-sass": "^4.14.1",
