--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prebuild": "jest",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -29,18 +29,21 @@
     "dayjs": "^1.10.7",
     "jest": "^27.2.1",
     "lodash": "^4.17.21",
-    "next": "11.1.2",
+    "next": "^11.1.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-test-renderer": "^17.0.2",
     "reactstrap": "^8.10.0",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.0",
+    "@types/jest": "^27.0.2",
     "@types/react": "17.0.20",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
